swagger and UserConnection